--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Weather Dashboard</title>
 </head>
@@ -29,28 +35,48 @@
                     <h2 id="city-name" class="fw-bold">
                         <span id="date"></span>
                     </h2>
-                    <p id="current-temperature">test</p>
-                    <p id="current-wind">test</p>
-                    <p id="current-humidity">test</p>
-                    <p id="current-uv">test</p>
+                    <p id="current-temperature">Temp:</p>
+                    <p id="current-wind">Wind:</p>
+                    <p id="current-humidity">Humidity:</p>
+                    <p id="current-uv">UV Index:</p>
                 </div>
                 <div class="container-fluid p-0 pt-3">
-                    <div class="row">
+                    <div class="row justify-content-between">
                         <h3 class="fw-bold">5-Day Forecast</h3>
-                        <div class="col-6 col-md-2">
+                        <div class="col-6 col-md-2 forecast text-light">
                             <h4>test</h4>
+                            <i></i>
+                            <p>Temp:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2">
+                        <div class="col-6 col-md-2 forecast text-light">
                             <h4>test</h4>
+                            <i></i>
+                            <p>Temp:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2">
+                        <div class="col-6 col-md-2 forecast text-light">
                             <h4>test</h4>
+                            <i></i>
+                            <p>Temp:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2">
+                        <div class="col-6 col-md-2 forecast text-light">
                             <h4>test</h4>
+                            <i></i>
+                            <p>Temp:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2">
+                        <div class="col-6 col-md-2 forecast text-light">
                             <h4>test</h4>
+                            <i></i>
+                            <p>Temp:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
                         </div>
                     </div>
                 </div>
