--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Weather Dashboard</title>
 </head>
@@ -32,13 +26,15 @@
             </div>
             <div class="col-12 col-md-9 p-3">
                 <div class="border border-1 border-dark p-1">
-                    <h2 id="city-name" class="fw-bold">
-                        <span id="date"></span>
-                    </h2>
-                    <p id="current-temperature">Temp:</p>
+                    <h2 id="city-name" class="fw-bold d-inline-block"></h2>
+                    <h2 id="current-date" class="fw-bold d-inline-block"></h2>
+                    <img id="current-icon" class="d-inline-block" />
+                    <p id="current-temperature" class="pt-2">Temp:</p>
                     <p id="current-wind">Wind:</p>
                     <p id="current-humidity">Humidity:</p>
-                    <p id="current-uv">UV Index:</p>
+                    <p>UV Index: 
+                        <span id="current-uv"></span>
+                    </p>
                 </div>
                 <div class="container-fluid p-0 pt-3">
                     <div class="row justify-content-between">
@@ -85,6 +81,7 @@
         
     </main>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/dayjs.min.js" integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
