display previous searches

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <input name="city" id="city" type="text" class="w-100 border border-dark border-1 rounded-3 fs-5 p-2" placeholder="Enter city" />
                     <button id="submit-btn" class="w-100 btn btn-primary p-1 mt-2" type="submit">Search</button>
                 </form>
-                <div class="w-100 mt-2 p-2 border-top border-2 border-secondary">
+                <div id="history-btns" class="w-100 mt-2 pt-2 border-top border-2 border-secondary">
                 </div>
             </div>
             <div class="col-12 col-md-9 p-3">
@@ -39,40 +39,40 @@
                 <div class="container-fluid p-0 pt-3">
                     <div class="row justify-content-between">
                         <h3 class="fw-bold">5-Day Forecast</h3>
-                        <div class="col-6 col-md-2 forecast text-light">
-                            <h4>test</h4>
-                            <i></i>
-                            <p>Temp:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                        <div id="day1" class="col-6 col-md-2 forecast text-light">
+                            <h4 class="pt-1"></h4>
+                            <img class="d-inline-block" />
+                            <p class="temp">Temp:</p>
+                            <p class="wind">Wind:</p>
+                            <p class="humidity">Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2 forecast text-light">
-                            <h4>test</h4>
-                            <i></i>
-                            <p>Temp:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                        <div id="day2" class="col-6 col-md-2 forecast text-light">
+                            <h4 class="pt-1"></h4>
+                            <img class="d-inline-block" />
+                            <p class="temp">Temp:</p>
+                            <p class="wind">Wind:</p>
+                            <p class="humidity">Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2 forecast text-light">
-                            <h4>test</h4>
-                            <i></i>
-                            <p>Temp:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                        <div id="day3" class="col-6 col-md-2 forecast text-light">
+                            <h4 class="pt-1"></h4>
+                            <img class="d-inline-block" />
+                            <p class="temp">Temp:</p>
+                            <p class="wind">Wind:</p>
+                            <p class="humidity">Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2 forecast text-light">
-                            <h4>test</h4>
-                            <i></i>
-                            <p>Temp:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                        <div id="day4" class="col-6 col-md-2 forecast text-light">
+                            <h4 class="pt-1"></h4>
+                            <img class="d-inline-block" />
+                            <p class="temp">Temp:</p>
+                            <p class="wind">Wind:</p>
+                            <p class="humidity">Humidity:</p>
                         </div>
-                        <div class="col-6 col-md-2 forecast text-light">
-                            <h4>test</h4>
-                            <i></i>
-                            <p>Temp:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                        <div id="day5" class="col-6 col-md-2 forecast text-light">
+                            <h4 class="pt-1"></h4>
+                            <img class="d-inline-block" />
+                            <p class="temp">Temp:</p>
+                            <p class="wind">Wind:</p>
+                            <p class="humidity">Humidity:</p>
                         </div>
                     </div>
                 </div>
