update search history buttons after each search and fix uv index colors

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     <h2 id="city-name" class="fw-bold d-inline-block"></h2>
                     <h2 id="current-date" class="fw-bold d-inline-block"></h2>
                     <img id="current-icon" class="d-inline-block" />
-                    <p id="current-temperature" class="pt-2">Temp:</p>
-                    <p id="current-wind">Wind:</p>
-                    <p id="current-humidity">Humidity:</p>
-                    <p>UV Index: 
-                        <span id="current-uv"></span>
+                    <p id="current-temperature" class="pt-2 fs-5">Temp:</p>
+                    <p id="current-wind" class="fs-5">Wind:</p>
+                    <p id="current-humidity" class="fs-5">Humidity:</p>
+                    <p class="fs-5">UV Index: 
+                        <span id="current-uv" class="fs-6"></span>
                     </p>
                 </div>
                 <div class="container-fluid p-0 pt-3">
