last styling touches and .catch function for network errors

--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
                     </p>
                 </div>
                 <div class="container-fluid p-0 pt-3">
-                    <div class="row justify-content-between">
+                    <div class="row justify-content-around">
                         <h3 class="fw-bold">5-Day Forecast</h3>
-                        <div id="day1" class="col-6 col-md-2 forecast text-light">
+                        <div id="day1" class="col-5 col-md-3 col-lg-2 forecast text-light">
                             <h4 class="pt-1"></h4>
                             <img class="d-inline-block" />
                             <p class="temp">Temp:</p>
                             <p class="wind">Wind:</p>
                             <p class="humidity">Humidity:</p>
                         </div>
-                        <div id="day2" class="col-6 col-md-2 forecast text-light">
+                        <div id="day2" class="col-5 col-md-3 col-lg-2 forecast text-light">
                             <h4 class="pt-1"></h4>
                             <img class="d-inline-block" />
                             <p class="temp">Temp:</p>
                             <p class="wind">Wind:</p>
                             <p class="humidity">Humidity:</p>
                         </div>
-                        <div id="day3" class="col-6 col-md-2 forecast text-light">
+                        <div id="day3" class="col-5 col-md-3 col-lg-2 forecast text-light">
                             <h4 class="pt-1"></h4>
                             <img class="d-inline-block" />
                             <p class="temp">Temp:</p>
                             <p class="wind">Wind:</p>
                             <p class="humidity">Humidity:</p>
                         </div>
-                        <div id="day4" class="col-6 col-md-2 forecast text-light">
+                        <div id="day4" class="col-5 col-md-3 col-lg-2 forecast text-light">
                             <h4 class="pt-1"></h4>
                             <img class="d-inline-block" />
                             <p class="temp">Temp:</p>
                             <p class="wind">Wind:</p>
                             <p class="humidity">Humidity:</p>
                         </div>
-                        <div id="day5" class="col-6 col-md-2 forecast text-light">
+                        <div id="day5" class="col-5 col-md-3 col-lg-2 forecast text-light">
                             <h4 class="pt-1"></h4>
                             <img class="d-inline-block" />
                             <p class="temp">Temp:</p>
